# airflow-lab

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-datahub.yaml  docker-compose.lite.yaml  docker-compose.yaml  pyproject.toml
code/chapter-03/: first_dag.py
code/chapter-04/: second_dag.py
code/chapter-15/: task_group.py
code/chapter-16/: dag_sla.py
docs/chapter-0/: README.md
docs/chapter-01/: README.md
docs/chapter-02/: README.md
docs/chapter-03/: README.md
docs/chapter-04/: README.md
docs/chapter-05/: README.md
docs/chapter-06/: README.md
docs/chapter-07/: README.md
docs/chapter-08/: README.md
docs/chapter-09/: README.md
docs/chapter-10/: README.md
docs/chapter-11/: README.md
docs/chapter-12/: README.md
docs/chapter-13/: README.md
docs/chapter-14/: README.md
docs/chapter-15/: README.md
docs/chapter-16/: README.md
docs/chapter-17/: README.md
docs/chapter-18/: README.md
docs/chapter-19/: README.md
scripts/: upgrade-airflow-version.sh
