[tool.poetry]
name = "airflow-lab"
version = "0.1.0"
description = ""
authors = ["WeRockStar <kotchaphan.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
apache-airflow = "2.10.3"
acryl-datahub-airflow-plugin = "^0.14.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
